WIP: extract location to its own namespace

--- a/swarm.cabal
+++ b/swarm.cabal
@@ -55,6 +55,7 @@ library
                       Swarm.Language.Types
                       Swarm.Language.Syntax
                       Swarm.Language.Capability
+                      Swarm.Language.Location
                       Swarm.Language.Parse
                       Swarm.Language.Parse.QQ
                       Swarm.Language.Pretty
